Some improvements of the build process.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,29 +10,32 @@ endmacro()
 
 # set a default build type if none was provided
 # this has to be done before the project() instruction!
-sfml_set_option(CMAKE_BUILD_TYPE Release STRING "Choose the type of build (Debug or Release)")
+sfml_set_option(CMAKE_BUILD_TYPE Release
+  STRING "Choose the type of build (Debug or Release)")
+string(TOLOWER ${CMAKE_BUILD_TYPE} LC_BUILD_TYPE)
+sfml_set_option(CLASP_GC boehm
+  STRING "Choose the clasp garbage collector (boehm or mps)")
+
+#This always results in clang 3.7 for me, where clasp was compiled with clang 3.6
+#set(CMAKE_CXX_COMPILER clang++)
+#set(CMAKE_C_COMPILER clang)
 
 # project name
 project(CLASP-SFML)
 
-# setup version numbers
-set(VERSION_MAJOR 2)
-set(VERSION_MINOR 2)
-set(VERSION_PATCH 0)
-
-find_path(CLASP_INCLUDE_PATH clasp/clasp.h DOC "The include directory of clasp")
-find_path(CLASP_LIB_PATH libclasp-clbind.so DOC "The lib path of clasp")
+find_path(CLASP_INCLUDE_PATH clasp/clasp.h HINTS $ENV{CLASP_HOME}/include
+  DOC "The include directory of clasp")
 find_path(SFML_INCLUDE_PATH SFML/System.hpp DOC "The include directory of SFML")
+
+find_library(CLASP_CLBIND_LIB libclasp-clbind.so
+  HINTS $ENV{CLASP_HOME}/build/clasp/Contents/execs/${CLASP_GC}/${LC_BUILD_TYPE}/lib
+  DOC "The clasp clbind library")
 #find_path(EXTERNALS_CLASP_PATH gc_cpp.h DOC "The directory of externals-clasp")
 
 # add the SFML header path
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include
   ${CLASP_INCLUDE_PATH}
-  ${SFML_INCLUDE_PATH}
-  #${EXTERNALS_CLASP_PATH}/build/common/include
-  #/home/flash/dev/externals-clasp/build/common/include
-  #/home/flash/dev/clasp-src/include
-  )
+  ${SFML_INCLUDE_PATH})
 
 add_compile_options(-std=c++11
    -v 
@@ -44,7 +47,7 @@ add_compile_options(-std=c++11
    -DUSE_ALLOCA_FOR_FRAME
    -D_ADDRESS_MODEL_64
    -Wl,--start-group
-   ${CLASP_LIB_PATH}/libclasp-clbind.so
+   ${CLASP_CLBIND_LIB}
    -Wl,--end-group)
  
  set(BUILD_SHARED_LIBS TRUE)
