--- a/src/CLASP-SFML/Audio/CMakeLists.txt
+++ b/src/CLASP-SFML/Audio/CMakeLists.txt
@@ -1,4 +1,9 @@
 file(GLOB AUDIO_SOURCES *.cpp)
 find_library(SFML_AUDIO libsfml-audio.so DOC "The sfml audio library")
 add_library(clasp-sfml-audio SHARED ${AUDIO_SOURCES})
-target_link_libraries(clasp-sfml-audio ${SFML_AUDIO})
+target_link_libraries(clasp-sfml-audio
+  ${SFML_AUDIO}
+  # -Wl,--start-group
+  # ${CLASP_CLBIND_LIB}
+  # -Wl,--end-group
+  )
