--- a/src/CLASP-SFML/System/CMakeLists.txt
+++ b/src/CLASP-SFML/System/CMakeLists.txt
@@ -1,5 +1,9 @@
 file(GLOB SYSTEM_SOURCES *.cpp)
-set(LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 find_library(SFML_SYSTEM libsfml-system.so DOC "The sfml system library")
 add_library(clasp-sfml-system SHARED ${SYSTEM_SOURCES})
-target_link_libraries(clasp-sfml-system ${SFML_SYSTEM})
+target_link_libraries(clasp-sfml-system
+  ${SFML_SYSTEM}
+  # -Wl,--start-group
+  # ${CLASP_CLBIND_LIB}
+  # -Wl,--end-group
+  )
