Improved library finding of CMake.

--- a/src/CLASP-SFML/Graphics/CMakeLists.txt
+++ b/src/CLASP-SFML/Graphics/CMakeLists.txt
@@ -1,5 +1,5 @@
 file(GLOB GRAPHICS_SOURCES *.cpp)
-find_library(SFML_GRAPHICS libsfml-graphics.so DOC "The sfml graphics library")
+find_library(SFML_GRAPHICS sfml-graphics HINTS $ENV{SFML_LIB_DIR} DOC "The sfml graphics library")
 add_library(clasp-sfml-graphics SHARED ${GRAPHICS_SOURCES})
 target_link_libraries(clasp-sfml-graphics
   ${SFML_GRAPHICS}
