--- a/src/CLASP-SFML/Window/CMakeLists.txt
+++ b/src/CLASP-SFML/Window/CMakeLists.txt
@@ -1,5 +1,5 @@
 file(GLOB WINDOW_SOURCES *.cpp)
-find_library(SFML_WINDOW libsfml-window.so DOC "The sfml window library")
+find_library(SFML_WINDOW sfml-window HINTS $ENV{SFML_LIB_DIR} DOC "The sfml window library")
 add_library(clasp-sfml-window SHARED ${WINDOW_SOURCES})
 target_link_libraries(clasp-sfml-window
   ${SFML_WINDOW}  
