--- a/src/CLASP-SFML/Audio/CMakeLists.txt
+++ b/src/CLASP-SFML/Audio/CMakeLists.txt
@@ -1,5 +1,5 @@
 file(GLOB AUDIO_SOURCES *.cpp)
-find_library(SFML_AUDIO libsfml-audio.so DOC "The sfml audio library")
+find_library(SFML_AUDIO sfml-audio HINTS $ENV{SFML_LIB_DIR} DOC "The sfml audio library")
 add_library(clasp-sfml-audio SHARED ${AUDIO_SOURCES})
 target_link_libraries(clasp-sfml-audio
   ${SFML_AUDIO}
